sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:15: error: value ==- is not a member of Int
    if(i==-1){
        ^